--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Twitch.tv Stream</title>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="styles/common.css"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
 
+  <script type="text/javascript" src="scripts/common.js"></script>
 </body>
 </html>
