--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
-
+  <div class="container">
+    <div class="users"></div>
+  </div>
   <script type="text/javascript" src="scripts/common.js"></script>
 </body>
 </html>
