--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Twitch.tv Stream</title>
+  <title>Twitch.tv Status</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="styles/common.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
+  <nav class="navbar header">
+    <div class="container">
+      <div class="navbar-header navbar-center">
+        <h4 class="header-text">Twitch.tv Status</h4>
+      </div>
+    </div>
+  </nav>
   <div class="container">
-    <div class="users"></div>
+    <div>
+      <label class="search">
+        <input type="text" class="placeholder"><i class="glyphicon glyphicon-search search-icon"></i>
+      </label>
+    </div>
+    <div class="panel panel-default users">
+      <ul id="user-list"></ul>
+    </div>
   </div>
   <script type="text/javascript" src="scripts/common.js"></script>
 </body>
