Added radio <input> to index.html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
     </div>
   </nav>
   <div class="container">
-    <div>
-      <label class="search">
+    <div class="search">
+      <label>
         <input type="text" class="placeholder"><i class="glyphicon glyphicon-search search-icon"></i>
       </label>
+      <form class="row filter-list">
+        <label class="col-xs-4"><input type="radio" checked name="filter"> All</label>
+        <label class="col-xs-4"><input type="radio" name="filter"> <span style="color: green;">Online</span></label>
+        <label class="col-xs-4"><input type="radio" name="filter"> <span style="color: red;">Offline</span></label>
+      </form>
     </div>
     <div class="panel panel-default users">
       <ul id="user-list"></ul>
