--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav class="navbar header">
     <div class="container">
       <div class="navbar-header navbar-center">
-        <h4 class="header-text">Twitch.tv Status</h4>
+        <h4 class="header-text">Twitch.tv stream status</h4>
       </div>
     </div>
   </nav>
